--- a/scss/mixins/_key.scss
+++ b/scss/mixins/_key.scss
@@ -47,7 +47,7 @@
   }
 
   &:hover,
-  &.key-active {
+  &[data-active=true] {
 
     &::after {
       opacity: 1;
